--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <li class="cabecalho item">turma</li>
     <li class="cabecalho item">estudante</li>
     </ul>
-
- </header>
+    </header>
+    <section class="turma">
+<h2 class="turma-titulo">sobre a turma:</h2>
+<p class="turma-paragrafo-um">nossa turma da segunda serie B, é famosa e um pouco dispersa mas entrega excelentes resultados.</p>
+<p class="turma-paragrafo-dois">esta é uma turma muito diversa, participativa e engajada, sempre colaborando com suas experiências.</p>
+<img class="turma-imagem" src="sala .webp" alt="sala de aula">
+    </section>
 </body>
 </html>
