--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 </head>
 <body>
     <header class="cabecalho">
-
-    <img class="cabecalho imagem" src="alura.png" alt="logo da alura">
-
+    <img class="cabecalho-imagem" src="alura.png" alt="logo da alura"> 
     </ul>
-    <li class="cabecalho item">turma</li>
-    <li class="cabecalho item">estudante</li>
+    <li class="cabecalho-item">turma</li>
+    <li class="cabecalho-item">estudante</li>
     </ul>
     </header>
     <section class="turma">
-<h2 class="turma-titulo">sobre a turma:</h2>
+        <h2 class="turma-titulo">sobre a turma:</h2>
+        <div class="turma-div">
 <p class="turma-paragrafo-um">nossa turma da segunda serie B, é famosa e um pouco dispersa mas entrega excelentes resultados.</p>
-<p class="turma-paragrafo-dois">esta é uma turma muito diversa, participativa e engajada, sempre colaborando com suas experiências.</p>
 <img class="turma-imagem" src="sala .webp" alt="sala de aula">
+</div>
     </section>
+
+    <section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src=""
 </body>
 </html>
