--- a/index.html
+++ b/index.html
@@ -26,6 +26,65 @@
     <section class="estudante">
     <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
     <div class="estudante div">
-      <img class="estudante-imagem" src=""
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">vitoria layssa pereira</h3>
+    </div>
+    </section>
+</body>
+</html>
+
+<section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">vitoria barboza</h3>
+    </div>
+    </section>
+</body>
+</html>
+
+<section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">izabella</h3>
+    </div>
+    </section>
+</body>
+</html>
+
+<section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">alisson</h3>
+    </div>
+    </section>
+</body>
+</html>
+
+<section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">kauany</h3>
+    </div>
+    </section>
+</body>
+</html>
+
+<section class="estudante">
+    <h1 class="estudante-titulo"> quem sao nossos estudantes</h1>
+    <div class="estudante div">
+      <img class="estudante-imagem" src="estudante.jpeg" alt="imagem de estudante">
+      <img class="estudante-icone" src="github.png" alt="icone github">
+      <h3 class="estudante-legenda">joao</h3>
+    </div>
+    </section>
 </body>
 </html>
